--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chalk": "^5.4.1",
     "commander": "^13.1.0",
     "fs-extra": "^11.3.0",
+    "handlebars": "^4.7.8",
     "inquirer": "^12.4.2"
   }
 }
