--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
     "@types/inquirer": "^9.0.7",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.13.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
@@ -34,6 +35,7 @@
     "commander": "^13.1.0",
     "fs-extra": "^11.3.0",
     "handlebars": "^4.7.8",
-    "inquirer": "^12.4.2"
+    "inquirer": "^12.4.2",
+    "js-yaml": "^4.1.0"
   }
 }
