--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node --esm src/index.ts",
+    "dev": "npx tsx src/index.ts",
     "start": "node dist/index.js",
     "prepublishOnly": "npm run build",
     "compile": "tsc --noEmit"
